# diffdev

./: .gitignore  .pre-commit-config.yaml  .tmuxinator.yml  README.md  makefile  pyproject.toml  requirements.txt  setup.py  system_prompt.txt
.github/workflows/: publish.yml  test-publish.yml
src/: __init__.py
src/diffdev/: cli.py  clipboard.py  gitignore.py  llm.py  tree_utils.py
