[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diffdev"
version = "0.1.0"
description = "A semi-autonomous framework for easily developing repo-wide changes"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "pathspec",
]

[project.scripts]
diffdev = "diffdev.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["diffdev"]
